// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectfieldWrapper snapshots tests renders SelectField component 1`] = `
<Fragment>
  <ForwardRef(FormControl)
    error={false}
    style={
      Object {
        "width": "100%",
      }
    }
    variant="standard"
  >
    <ForwardRef(InputLabel)
      id="test-label"
    />
    <ForwardRef(Select)
      MenuProps={
        Object {
          "data-analyticsid": "test-options",
          "data-testid": "test-options",
          "id": "test-options",
        }
      }
      SelectDisplayProps={
        Object {
          "data-testid": "test-select",
          "id": "test-select",
        }
      }
      autoWidth={true}
      floatingLabelText="This is a test selectfield component"
      fullWidth={true}
      inputProps={
        Object {
          "aria-labelledby": "test-label",
          "data-analyticsid": "test-input",
          "data-testid": "test-input",
          "id": "test-input",
        }
      }
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value=""
      variant="standard"
    />
  </ForwardRef(FormControl)>
</Fragment>
`;

exports[`SelectfieldWrapper snapshots tests renders an error 1`] = `
<Fragment>
  <ForwardRef(FormControl)
    error={true}
    style={
      Object {
        "width": "100%",
      }
    }
    variant="standard"
  >
    <ForwardRef(InputLabel)
      id="test-label"
    />
    <ForwardRef(Select)
      MenuProps={
        Object {
          "data-analyticsid": "test-options",
          "data-testid": "test-options",
          "id": "test-options",
        }
      }
      SelectDisplayProps={
        Object {
          "data-testid": "test-select",
          "id": "test-select",
        }
      }
      autoWidth={true}
      error={true}
      floatingLabelText="test selectfield component"
      fullWidth={true}
      inputProps={
        Object {
          "aria-labelledby": "test-label",
          "data-analyticsid": "test-input",
          "data-testid": "test-input",
          "id": "test-input",
        }
      }
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value=""
      variant="standard"
    />
    <ForwardRef(FormHelperText)>
      Something bad happened
    </ForwardRef(FormHelperText)>
  </ForwardRef(FormControl)>
</Fragment>
`;
